# learn

.devcontainer/: devcontainer.json
haskell/thebook/: README.md
haskell/thebook/ch10/: ex.hs
haskell/thebook/ch11/: ex.hs
haskell/thebook/ch14/addition/: .gitignore  Addition.hs  addition.cabal
haskell/thebook/ch14/morse/: morse.cabal  package.yaml
haskell/thebook/ch14/morse/app/: Main.hs
haskell/thebook/ch14/morse/src/: Lib.hs
haskell/thebook/ch14/morse/test/: Spec.hs
haskell/thebook/ch15/: ex.hs  ex_semigroup.hs
haskell/thebook/ch17/: constant.hs  identity.hs  list_applicative.hs  lookups.hs  validation.hs  zip_list_applicative.hs
haskell/thebook/ch18/: ex.hs  ex2.hs
haskell/thebook/ch22/: ch_ex.hs  ex.hs
haskell/thebook/ch23/: dice.hs  ex.hs  fizzbuzz.hs  typeclass.hs
haskell/thebook/ch24/: README.md  fraction.hs  ini.hs  learn_parsers.hs
haskell/thebook/ch26/: trans.hs
haskell/thebook/hangman/: hangman.cabal
haskell/thebook/hangman/data/: dict.txt
haskell/thebook/hangman/src/: Main.hs
ocaml/more/: README.md  dune-project  more.opam
ocaml/more/lib/: ch1.ml  ch2.ml  ch3.ml  ch4.ml  dune
